src/conferences/rs/sass/components/_pop-ticket.sass
.pop-ticket
	// position: fixed
	// left: 50%
	// top: 50%
	// transform: translate(-50%, -50%)
	border: 15px solid $themeColor
	background: #131513
	width: 1030px
	max-width: 95%
	padding: 80px 0
	z-index: 100
	display: none

	&.alert

		.pop-ticket
			&__title
				margin: 0

				+sm
					font-size: 20px


	+md
		padding: 50px 0

	+sm
		width: 540px
		padding: 0 40px

	+xs
		padding: 0 20px


	&__two-col
		display: flex

		+sm
			flex-direction: column

	&__left
		flex: 1 0
		display: flex
		flex-direction: column
		padding: 40px 64px
		justify-content: center
		min-height: 330px

		+md
			padding: 40px 40px

		+sm
			min-height: 0
			padding: 40px 0


	&__right
		flex: 1 0
		border-left: 1px solid #2c302d
		display: flex
		flex-direction: column
		padding: 40px 64px
		justify-content: center
		min-height: 330px

		+md
			padding: 40px 40px

		+sm
			border: none
			border-top: 1px solid #2c302d
			min-height: 0
			padding: 40px 0

	&__title
		font-size: 24px
		line-height: 1.28
		text-align: center
		margin-bottom: 28px

	&__desc
		font-size: 16px
		line-height: 1.5
		text-align: center
		margin-bottom: 28px

	&__btn
		max-width: 224px
		width: 100%
		margin: auto auto 0
		height: 50px

	.c-form
		margin: auto 0 0
		padding: 0

		+md
			border: none

		&__input
			font-size: 16px
			padding: 16px 80px 16px 25px

		&__submit
			font-size: 14px
			text-transform: uppercase
			font-weight: 700

	

